--- a/toxify/data/Snakefile
+++ b/toxify/data/Snakefile
@@ -636,7 +636,7 @@ rule splitSeqs:
         sequence_iterator = fasta_iter(input[0])
         for ff in sequence_iterator:
             headerStr,seq = ff
-            with open("sequences/"+headerStr.replace("|","_")+".seq") as out:
+            with open("sequences/"+headerStr.replace("|","_")+".seq","w") as out:
                 out.write(">"+headerStr+"\n")
                 out.write(seq + "\n")
 
