last remnant of pssm stripped

--- a/toxify/data/Snakefile
+++ b/toxify/data/Snakefile
@@ -778,7 +778,7 @@ rule combineFiles:
         "all.combined.csv"
     run:
         df_dict = {}
-        files = [input.sspro,input.shahib,input.pssm]
+        files = [input.sspro,input.shahib]
         for current_file in files:
             df_name = str(current_file)
             currentData = pd.read_csv(current_file, header=None)
