--- a/requirements.yml
+++ b/requirements.yml
@@ -7,7 +7,7 @@ dependencies:
   - snakemake
   - python=3.6.3
   - numpy
-  - tensorflow
+  - tensorflow=1.3.0
   - pandas
   - scikit-learn
   - pillow
