--- a/toxify/data/Snakefile
+++ b/toxify/data/Snakefile
@@ -82,7 +82,7 @@ def makeCompFeatures(seq):
                     #total number of current_class
                     tot_num = 0
                     for aa in seq:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*" :
                             if current_class in aa_descript[aa]:
                                 tot_num+=1
                     # print("FACTOR:",current_factor,"CLASS:",current_class,"is:",tot_num)
@@ -92,7 +92,7 @@ def makeCompFeatures(seq):
                 if i ==2:
                     tot_num = 0
                     for aa in seq:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*":
                             if current_class in aa_descript[aa]:
                                 tot_num+=1
                     # print("FACTOR:",current_factor,"CLASS:",current_class,"is:",float(tot_num)/len(seq))
@@ -103,7 +103,7 @@ def makeCompFeatures(seq):
                     tot_num = 0
                     seq_q1 = seq[0:quarter_len]
                     for aa in seq_q1:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*":
                             if current_class in aa_descript[aa]:
                                 tot_num+=1
                     # print("FACTOR:",current_factor,"CLASS:",current_class,"is:",float(tot_num))
@@ -114,7 +114,7 @@ def makeCompFeatures(seq):
                     tot_num = 0
                     seq_q1 = seq[0:quarter_len]
                     for aa in seq_q1:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*":
                             if current_class in aa_descript[aa]:
                                 tot_num+=1
                     # print("FACTOR:",current_factor,"CLASS:",current_class,"is:",float(tot_num)/len(seq))
@@ -125,12 +125,12 @@ def makeCompFeatures(seq):
                     q1_num = 0
                     # seq_q1 = seq[0:quarter_len]
                     for aa in seq_q1:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*":
                             if current_class in aa_descript[aa]:
                                 q1_num+=1
                     tot_num = 0
                     for aa in seq:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*":
                             if current_class in aa_descript[aa]:
                                 tot_num+=1
                     if tot_num == 0:
@@ -143,7 +143,7 @@ def makeCompFeatures(seq):
                 if i ==6:
                     tot_num = 0
                     for aa in seq_q2:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*":
                             if current_class in aa_descript[aa]:
                                 tot_num+=1
                     # print("FACTOR:",current_factor,"CLASS:",current_class,"is:",float(tot_num))
@@ -153,7 +153,7 @@ def makeCompFeatures(seq):
                 if i ==7:
                     tot_num = 0
                     for aa in seq_q2:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*":
                             if current_class in aa_descript[aa]:
                                 tot_num+=1
                     header2write+="f"+str(current_factor)+"c"+str(current_class)+","
@@ -162,12 +162,12 @@ def makeCompFeatures(seq):
                 if i ==8:
                     q2_num = 0
                     for aa in seq_q2:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*":
                             if current_class in aa_descript[aa]:
                                 q2_num+=1
                     tot_num = 0
                     for aa in seq:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*":
                             if current_class in aa_descript[aa]:
                                 tot_num+=1
                     if tot_num == 0:
@@ -183,7 +183,7 @@ def makeCompFeatures(seq):
                 if i ==9:
                     tot_num = 0
                     for aa in seq_q3:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*":
                             if current_class in aa_descript[aa]:
                                 tot_num+=1
                     # print("FACTOR:",current_factor,"CLASS:",current_class,"is:",float(tot_num))
@@ -193,7 +193,7 @@ def makeCompFeatures(seq):
                 if i ==10:
                     tot_num = 0
                     for aa in seq_q3:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*":
                             if current_class in aa_descript[aa]:
                                 tot_num+=1
                     header2write+="f"+str(current_factor)+"c"+str(current_class)+","
@@ -202,12 +202,12 @@ def makeCompFeatures(seq):
                 if i ==11:
                     q3_num = 0
                     for aa in seq_q3:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*":
                             if current_class in aa_descript[aa]:
                                 q3_num+=1
                     tot_num = 0
                     for aa in seq:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*":
                             if current_class in aa_descript[aa]:
                                 tot_num+=1
                     if tot_num == 0:
@@ -224,7 +224,7 @@ def makeCompFeatures(seq):
                 if i ==12:
                     tot_num = 0
                     for aa in seq_q4:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*":
                             if current_class in aa_descript[aa]:
                                 tot_num+=1
                     # print("FACTOR:",current_factor,"CLASS:",current_class,"is:",float(tot_num))
@@ -234,7 +234,7 @@ def makeCompFeatures(seq):
                 if i ==13:
                     tot_num = 0
                     for aa in seq_q4:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*":
                             if current_class in aa_descript[aa]:
                                 tot_num+=1
                     header2write+="f"+str(current_factor)+"c"+str(current_class)+","
@@ -243,12 +243,12 @@ def makeCompFeatures(seq):
                 if i ==14:
                     q4_num = 0
                     for aa in seq_q4:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*":
                             if current_class in aa_descript[aa]:
                                 q4_num+=1
                     tot_num = 0
                     for aa in seq:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*":
                             if current_class in aa_descript[aa]:
                                 tot_num+=1
                     if tot_num == 0:
@@ -265,7 +265,7 @@ def makeCompFeatures(seq):
                 if i ==15:
                     tot_num = 0
                     for aa in seq_q2:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*":
                             if current_class in aa_descript[aa]:
                                 tot_num+=1
                     # print("FACTOR:",current_factor,"CLASS:",current_class,"is:",float(tot_num))
@@ -275,7 +275,7 @@ def makeCompFeatures(seq):
                 if i ==16:
                     tot_num = 0
                     for aa in seq_half1:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*":
                             if current_class in aa_descript[aa]:
                                 tot_num+=1
                     header2write+="f"+str(current_factor)+"c"+str(current_class)+","
@@ -284,12 +284,12 @@ def makeCompFeatures(seq):
                 if i ==17:
                     half1_num = 0
                     for aa in seq_half1:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*":
                             if current_class in aa_descript[aa]:
                                 half1_num+=1
                     tot_num = 0
                     for aa in seq:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*":
                             if current_class in aa_descript[aa]:
                                 tot_num+=1
                     if tot_num == 0:
@@ -305,7 +305,7 @@ def makeCompFeatures(seq):
                 if i ==18:
                     tot_num = 0
                     for aa in seq_q2_3:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*":
                             if current_class in aa_descript[aa]:
                                 tot_num+=1
                     # print("FACTOR:",current_factor,"CLASS:",current_class,"is:",float(tot_num))
@@ -315,7 +315,7 @@ def makeCompFeatures(seq):
                 if i ==19:
                     tot_num = 0
                     for aa in seq_q2_3:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*":
                             if current_class in aa_descript[aa]:
                                 tot_num+=1
                     header2write+="f"+str(current_factor)+"c"+str(current_class)+","
@@ -324,12 +324,12 @@ def makeCompFeatures(seq):
                 if i ==20:
                     q2_3_num = 0
                     for aa in seq_q2_3:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*":
                             if current_class in aa_descript[aa]:
                                 q2_3_num+=1
                     tot_num = 0
                     for aa in seq:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*":
                             if current_class in aa_descript[aa]:
                                 tot_num+=1
                     if tot_num == 0:
@@ -345,7 +345,7 @@ def makeCompFeatures(seq):
                 if i ==21:
                     tot_num = 0
                     for aa in seq_half2:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*":
                             if current_class in aa_descript[aa]:
                                 tot_num+=1
                     # print("FACTOR:",current_factor,"CLASS:",current_class,"is:",float(tot_num))
@@ -355,7 +355,7 @@ def makeCompFeatures(seq):
                 if i ==22:
                     tot_num = 0
                     for aa in seq_half2:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*":
                             if current_class in aa_descript[aa]:
                                 tot_num+=1
                     header2write+="f"+str(current_factor)+"c"+str(current_class)+","
@@ -364,12 +364,12 @@ def makeCompFeatures(seq):
                 if i ==23:
                     half2_num = 0
                     for aa in seq_half2:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*":
                             if current_class in aa_descript[aa]:
                                 half2_num+=1
                     tot_num = 0
                     for aa in seq:
-                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O":
+                        if aa != "X" and aa != "Z" and aa!="U" and aa!="B" and aa!="O" and aa!="*":
                             if current_class in aa_descript[aa]:
                                 tot_num+=1
                     if tot_num == 0:
@@ -401,7 +401,7 @@ def makeCompFeatures(seq):
                     numsWeWant = ""
                     for aa in range(len(seq)):
                         # print(aa,seq[aa] != "X" and seq[aa] != "Z" and seq[aa]!="U" and seq[aa]!="B" seq[aa]!="O")
-                        if seq[aa] != "X" and seq[aa] != "Z" and seq[aa]!="U" and seq[aa]!="B"  and seq[aa]!="O":
+                        if seq[aa] != "X" and seq[aa] != "Z" and seq[aa]!="U" and seq[aa]!="B"  and seq[aa]!="O" and seq[aa]!="*":
                             # if first_classFound == False:
                             if current_class in aa_descript[seq[aa]]:
                                 if seq.find(seq[aa])==aa:
@@ -442,7 +442,7 @@ def makeCompFeatures(seq):
 
     pair_dict = {}
     for i in range(len(seq)-1):
-        if seq[i] != "X" and seq[i] != "Z" and seq[i]!="U" and seq[i]!="B" and seq[i]!="O" and seq[i+1] != "X" and seq[i+1] != "Z" and seq[i+1]!="U" and seq[i+1]!="B" and seq[i+1]!="O" :
+        if seq[i] != "X" and seq[i] != "Z" and seq[i]!="U" and seq[i]!="B" and seq[i]!="O" and seq[i]!="*" and seq[i+1] != "X" and seq[i+1] != "Z" and seq[i+1]!="U" and seq[i+1]!="B" and seq[i+1]!="O" and seq[i+1]!="*":
             for left in aa_descript[seq[i]]:
                 for right in aa_descript[seq[i+1]]:
                     if (sorted([left,right])[0],sorted([left,right])[1]) not in pair_dict:
