--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 include toxify/models/*
 include toxify/models/variables/*
+include toxify/models/max_len_500/window_0/units_270/lr_0.01/epochs_50/models/saved_model/variables*
 include toxify/models/max_len_500/window_0/units_270/lr_0.01/epochs_50/models/saved_model/*
 include toxify/models/max_len_500/window_0/units_270/lr_0.01/epochs_50/models/*
 include toxify/models/max_len_500/window_0/units_270/lr_0.01/epochs_50/*
